# woofzoo_dev

./: .gitignore
server/: .cursorrules  .env.test  .gitignore  API_TESTING_GUIDE.md  AUTHENTICATION.md  CURSOR_RULES.md  Dockerfile  EMAIL_FLOW_EXPLANATION.md  EMAIL_TEMPLATES_REFACTOR.md  FASTAPI_DEPENDENCY_INJECTION_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LOGGING_BEST_PRACTICES.md  LOGGING_WITH_TRACE_IDS.md  MEDICAL_RECORDS_FINAL_STATUS.md  MEDICAL_RECORDS_IMPLEMENTATION_SUMMARY.md  Makefile  PROFILE_MANAGEMENT_GUIDE.md  README.md  TESTING_SETUP_SUMMARY.md  TESTING_STATUS.md  TEST_RESULTS_SUMMARY.md  alembic.ini  docker-compose.yml  env.example  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  test_datetime_fix.py  test_login_fix.py
server/alembic/: env.py
server/app/: __init__.py  config.py  database.py  dependencies.py  logger.py  main.py
server/docs/: existing_user_new_vet_journey.md  first_vet_visit_journey.md  pet_medical_system_schema.txt  pet_medical_system_timeline.markdown  pet_medical_system_trd.markdown  user_onboarding_trd_v2.md
server/examples/: auth_demo.py  exception_logging_example.py  hybrid_dependencies_demo.py  test_email_templates.py  trace_id_demo.py
server/scripts/: run_tests.sh  setup_test_env.sh
server/tests/: README.md  acceptance_tests_01_authentication.md  acceptance_tests_02_owner_management.md  acceptance_tests_03_pet_management.md  acceptance_tests_04_family_system.md  acceptance_tests_05_photo_management.md  acceptance_tests_06_integration_flows.md  acceptance_tests_07_error_handling.md  acceptance_tests_08_performance_security.md  acceptance_tests_09_users_api.md  acceptance_tests_index.md  conftest.py  test_allergies_api.py  test_auth.py  test_auth_system.py  test_clinic_access_api.py  test_family_api.py  test_family_invitation_api.py  test_family_member_api.py  test_full_system.py  test_integration_01_auth.py  (+13 more)
(+219 files in other folders)
